# keynet-semantic-network-analyzer

./: .env  .env.example  .gitignore  .pylintrc  CONFIG.md  Dockerfile  LICENSE  README.md  bluesky_posts_complex.csv  compose.yaml  config.py  grafo.xlsx  graph.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-jekyll.yml  publish.yml  pylint.yml
app/: __init__.py  graph.py  main.py  requirements.txt  settings.json
docs/: Keyword Network Analysis.html  Keyword Network Analysis.qmd  README.md  _quarto.yml  dashboard.qmd  index.markdown  index.qmd  presentation.html  presentation.qmd  requirements.txt
docs/.quarto/project-cache/: deno-kv-file
docs/_posts/: 2025-12-19-welcome-to-jekyll.markdown
docs/_site/: about.html  index.html  search.json
exports/: bluesky_posts_complex.csv  keyword_network.graphml
exports/archive/old/: community_assignments.csv  global_metrics.csv  grafo.xlsx  keyword_network_edges.txt  node_metrics.csv
exports/archive/old-2/full_analysis/: community_assignments.csv  global_metrics.csv  grafo.xlsx  keyword_network.graphml  keyword_sentiment.csv  node_metrics.csv
exports/archive/old-2/main_keywords/: bluesky_posts_complex.csv  community_assignments.csv  global_metrics.csv  keyword_network.graphml  keyword_network_edges.txt  node_metrics.csv
exports/archive/old-2/main_plus_our/: community_assignments.csv  global_metrics.csv  grafo.xlsx  keyword_network.graphml  keyword_network_edges.txt  node_metrics.csv
exports/archive/old-option3/2025-12-16_13-49-22_efd9fea7/: manifest.json
exports/full_analysis/: bluesky_posts_complex.csv  community_assignments.csv  global_metrics.csv  grafo.xlsx  keyword_network_edges.txt  node_metrics.csv
exports/main_keywords/: bluesky_posts_complex.csv  global_metrics.csv  grafo.xlsx  keyword_sentiment.csv  node_metrics.csv
exports/main_plus_our/: bluesky_posts_complex.csv  grafo.xlsx  keyword_network.graphml  keyword_sentiment.csv
exports/runs/: index.json
exports/runs/2025-12-13_10-52-01_868fa108/: manifest.json
exports/runs/2025-12-13_10-52-01_868fa108/full_analysis/: bluesky_posts_complex.csv  community_assignments.csv  global_metrics.csv  grafo.xlsx  keyword_network.graphml  keyword_network_edges.txt  node_metrics.csv
exports/runs/2025-12-13_10-52-01_868fa108/main_keywords/: bluesky_posts_complex.csv  community_assignments.csv  global_metrics.csv  grafo.xlsx  keyword_network.graphml  keyword_network_edges.txt  node_metrics.csv
exports/runs/2025-12-13_10-52-01_868fa108/main_plus_our/: bluesky_posts_complex.csv  global_metrics.csv  (+5 more)
exports/runs/2025-12-15_11-06-31_eda92b7c/: manifest.json
exports/runs/2025-12-15_11-34-48_583e1568/: manifest.json
exports/runs/2025-12-15_11-42-21_decb0b73/: manifest.json
exports/runs/2025-12-16_12-12-01_e76b4d00/: manifest.json
guide/: ANALYSIS.md  ARCHIVE.md  OUTPUTS.md  USE_CASES.md
keynet/: __init__.py  archive.py  config.py  graph.py
keynet_semantic_network_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: archive.py  config.py  graph.py  main.py  settings.json
tests/: test_graph.py  test_package.py
(+57 files in other folders)
